# agentshield-lite

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  dev.sh  docker-compose.yml  nginx.conf
.github/workflows/: ci.yml
backend/: Dockerfile  alembic.ini  config.py  database.py  events.py  main.py  models.py  requirements.txt  seeder.py
backend/agent/: security_agent.py
backend/alerts/: dispatcher.py  email.py  slack.py  teams.py  webhook.py
backend/api/: agents.py  bot.py  dashboard.py  logs.py  metrics.py  policies.py  stream.py
backend/middleware/: auth.py  rate_limit.py
backend/migrations/: env.py
backend/migrations/versions/: 0001_initial_schema.py  0002_add_agents_table.py
backend/policy/: engine.py
backend/proxy/: interceptor.py
backend/risk/: scorer.py
backend/tests/: conftest.py  test_api.py  test_policy_engine.py  test_risk_scorer.py
dashboard/: app.js  index.html  styles.css
scripts/: seed_demo_data.py
sdk/python/: pyproject.toml  setup.py
sdk/python/agentshield/: __init__.py  client.py  decorators.py
sdk/python/examples/: basic_agent.py  claude_agent.py  openai_agent.py
